[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/Wizards/WizardUI.gd" type="Script" id=1]

[node name="PlayerUIDebug" type="Position2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="Anchor" type="Control" parent="CanvasLayer"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="CanvasLayer/Anchor"]
margin_left = -35.0
margin_top = -21.0
margin_right = 35.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="CanvasLayer/Anchor/VBC"]
margin_right = 70.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovementState" type="Label" parent="CanvasLayer/Anchor/VBC"]
margin_top = 18.0
margin_right = 70.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackingState" type="Label" parent="CanvasLayer/Anchor/VBC"]
margin_top = 36.0
margin_right = 70.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectState" type="Label" parent="CanvasLayer/Anchor/VBC"]
margin_top = 54.0
margin_right = 70.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}
